--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,4 @@
-body {margin: 0;width: 100%}
+body {margin: 0;width: 100%;background-color:#5D6474}
 .content {
 overflow: hidden;
 letter-spacing: 20px;
