--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,7 +1,3 @@
 body {margin: 0;width: 100%;background-color:#5D6474}
-.content {
-overflow: hidden;
-letter-spacing: 20px;
-font-size: 50px;
-color: #d0d3da
-  }
+.content {overflow: hidden;letter-spacing: 20px;
+font-size: 50px;color: #d0d3da}
