--- a/assets/css/route.css
+++ b/assets/css/route.css
@@ -1,5 +1,5 @@
 .route_card {text-align: center;margin: 20px auto;padding: 10px;
-border-style: solid 1px #9294a3;background-color:#c0c2d3;width:50%;;}
-.route_card_top{text-align: start;font-size: large;}
+background-color:#b8bcca;width:500px;box-shadow:0px 0px 1000px #8387a0;}
+.route_card_top{text-align: start;font-size: large;color:#32363d;}
 .route_card_content{text-align: start;font-size: large;}
 .route_card_content img{width: 100%;position: relative;top: 5px;}
