--- a/assets/css/route.css
+++ b/assets/css/route.css
@@ -1,5 +1,11 @@
 .route_card {text-align: center;margin: 20px auto;padding: 10px;
-background-color:#b8bcca;width:500px;box-shadow:0px 0px 1000px #8387a0;}
+background-color:#b8bcca;width:500px;box-shadow:0px 0px 1000px #9a9eb9;}
 .route_card_top{text-align: start;font-size: large;color:#32363d;}
 .route_card_content{text-align: start;font-size: large;}
-.route_card_content img{width: 100%;position: relative;top: 5px;}
+.route_card_content .pic1{max-width: 100%;position: relative;top: 5px;}
+.route_card_content .pic9_con{display:grid;grid-template-columns:1fr 1fr 1fr;width:100%;text-align: center;}
+.route_card_content .pic9{overflow: hidden;margin: 3px;padding: 0;width:160px;height:160px;position: relative;}
+.route_card_content .pic9 img{position: absolute;transform:translate(-50%,-50%);top:50%;left:50% ;min-width: 100%;min-height: 100%;width: 100%;}
+.route_card_content .pic2_con{display:grid;grid-template-columns:1fr 1fr 1fr;width:100%;text-align: center;}
+.route_card_content .pic2{overflow: hidden;margin: 5px;padding: 0;width:240px;height:240px;position: relative;}
+.route_card_content .pic2 img{position: absolute;transform:translate(-50%,-50%);top:50%;left:50% ;min-width: 100%;min-height: 100%;width: 100%;}
