--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -12,9 +12,9 @@ font-size: 50px;color: #d0d3da}
 {
     iframe{display: none;}
     .topmeau ul{display:none;}
-    .topmeau li{float: none;left: 5px;}
-    .topmeau li a{display: block;}
-    .topmeau .top_btn{display:grid;background: #585f6f;width: 15vw;height: 15vw;position: fixed;top:83vh;left:10px;border-radius: 50%;box-shadow: 0 0 10px #484d5a;}
+    .topmeau li{float: none;right:0}
+    .topmeau li a{display:block;}
+    .topmeau .top_btn{display:grid;background: #585f6f;width: 15vw;height: 15vw;position: fixed;top:83vh;left:10px;border-radius: 50%;box-shadow: 0 0 10px #484d5a;justify-items: center;align-items: center;}
     .topmeau .top_btn:hover{background-color: #9194A5;box-shadow: 0 0 10px rgb(124, 126, 141)}
-    .topmeau .top_btn b{justify-self: center;font-size:10.5vw;color: #d0d3da;text-shadow:0 0 3px #d0d3da;}
+    .topmeau .top_btn b{font-size:13vw;color: #d0d3da;text-shadow:0 0 3px #d0d3da;}
 }
